Fix compile-time warnings